Omnibox/Views: Fix cutout position while the omnibox popup is open in touch.

The rounded omnibox drop-down cuts out a hole for the omnibox to show through
when it's open to avoid having to teleport the LocationBarView between Widgets.
r550927 adjusted the positioning and size of the drop-down, but regressed by
positioning the cutout incorrectly. This patch re-aligns it.

Bug: 833281
Change-Id: If95dad702b54fa44e6e8e6df4b959401510993df
Reviewed-on: https://chromium-review.googlesource.com/1013020
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Patti <patricialor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551198}
Former-commit-id: 3010d2e5a2ec25630354cbe50c992d5cfb811045